tests/ui/non_qpath_variant_in_pattern.ina
// COMPILE_FAIL

type T = A | B

fn main() {
    match T::A {
        A => {},
        B => {},
    }
}
